unpackaged/main/default/objects/EventApi__Room__c/EventApi__Room__c.object-meta.xml
<CustomObject>
    <description>Track the Rooms available for the Venues that host your Events and book them for Event Sessions.</description>
    <label>Room</label>
    <nameField>
        <label>Room Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rooms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>