unpackaged/main/default/objects/EventApi__Room__c/fields/EventApi__Capacity__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Capacity__c</fullName>
    <defaultValue>0</defaultValue>
    <description>** Required ** The maximum persons the room can accommodate at one time is used as the default inventory level for any Event Sessions booked to the Room.</description>
    <inlineHelpText>** Required ** The maximum persons the room can accommodate at one time is used as the default inventory level for any Event Sessions booked to the Room.</inlineHelpText>
    <label>Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>