unpackaged/main/default/objects/EventApi__Room__c/fields/EventApi__Description__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Description__c</fullName>
    <description>Optional description for the Room used to provide users context when booking Event Sessions for an Event that has access to the Room.</description>
    <inlineHelpText>Optional description for the Room used to provide users context when booking Event Sessions for an Event that has access to the Room.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>