unpackaged/main/default/objects/EventApi__Room__c/fields/EventApi__Disabled_Access__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Disabled_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked the Room is considered to be wheelchair accessible. Defaults unchecked.</description>
    <inlineHelpText>When checked the Room is considered to be wheelchair accessible. Defaults unchecked.</inlineHelpText>
    <label>Disabled Access</label>
    <type>Checkbox</type>
</CustomField>