unpackaged/main/default/objects/EventApi__Room__c/fields/EventApi__Drops__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Drops__c</fullName>
    <description>The number of network access ports available in the Room.</description>
    <inlineHelpText>The number of network access ports available in the Room.</inlineHelpText>
    <label>Drops</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>