unpackaged/main/default/objects/EventApi__Room__c/fields/EventApi__Layout__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Layout__c</fullName>
    <description>** Required ** Select the option that best describes the Layout of the Room.</description>
    <inlineHelpText>** Required ** Select the option that best describes the Layout of the Room.</inlineHelpText>
    <label>Layout</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Banquet</fullName>
                <color>#0B6FCE</color>
                <label>Banquet</label>
            </value>
            <value>
                <fullName>Classroom</fullName>
                <color>#78C953</color>
                <label>Classroom</label>
            </value>
            <value>
                <fullName>Conference</fullName>
                <color>#E27001</color>
                <default>true</default>
                <label>Conference</label>
            </value>
            <value>
                <fullName>Field</fullName>
                <color>#A845DC</color>
                <label>Field</label>
            </value>
            <value>
                <fullName>Hollow</fullName>
                <color>#F3D904</color>
                <label>Hollow</label>
            </value>
            <value>
                <fullName>Other Indoor</fullName>
                <color>#A53711</color>
                <label>Other Indoor</label>
            </value>
            <value>
                <fullName>Other Outdoor</fullName>
                <color>#66E9BD</color>
                <label>Other Outdoor</label>
            </value>
            <value>
                <fullName>Reception</fullName>
                <color>#0B24BE</color>
                <label>Reception</label>
            </value>
            <value>
                <fullName>Stadium</fullName>
                <color>#419249</color>
                <label>Stadium</label>
            </value>
            <value>
                <fullName>Tent</fullName>
                <color>#B6E32E</color>
                <label>Tent</label>
            </value>
            <value>
                <fullName>Theater</fullName>
                <color>#641CCF</color>
                <label>Theater</label>
            </value>
            <value>
                <fullName>U-Shape</fullName>
                <color>#F96FB7</color>
                <label>U-Shape</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>