unpackaged/main/default/objects/EventApi__Room__c/fields/EventApi__Location_Description__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Location_Description__c</fullName>
    <description>Enter a description that would be helpful for Attendees wanting to locate the Room.</description>
    <inlineHelpText>Enter a description that would be helpful for Attendees wanting to locate the Room.</inlineHelpText>
    <label>Location Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>