unpackaged/main/default/objects/EventApi__Room__c/fields/EventApi__Location_Name__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Location_Name__c</fullName>
    <description>Location name defaults to the name of the Room but can be modified to match the Venue&#39;s internal room code to assist with planning and bookings.</description>
    <inlineHelpText>Location name defaults to the name of the Room but can be modified to match the Venue&#39;s internal room code to assist with planning and bookings.</inlineHelpText>
    <label>Location Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>