unpackaged/main/default/objects/EventApi__Room__c/fields/EventApi__Minimum_Rental_Fee__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Minimum_Rental_Fee__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>The minimum fee amount required by the Venue to rent the Room.</description>
    <inlineHelpText>The minimum fee amount required by the Venue to rent the Room.</inlineHelpText>
    <label>Minimum Rental Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>