unpackaged/main/default/objects/EventApi__Room__c/fields/EventApi__Podium__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Podium__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the Room will be considered to include a Podium.</description>
    <inlineHelpText>When checked, the Room will be considered to include a Podium.</inlineHelpText>
    <label>Podium</label>
    <type>Checkbox</type>
</CustomField>