unpackaged/main/default/objects/EventApi__Room__c/fields/EventApi__Power_Outlets__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Power_Outlets__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of three-pronged power outlets available for use in the Room. Defaults to 1.</description>
    <inlineHelpText>The number of three-pronged power outlets available for use in the Room. Defaults to 1.</inlineHelpText>
    <label>Power Outlets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>