unpackaged/main/default/objects/EventApi__Room__c/fields/EventApi__Rental_Rate__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Rental_Rate__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Rental fee rate for the Room.</description>
    <inlineHelpText>Rental fee rate for the Room.</inlineHelpText>
    <label>Rental Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>