unpackaged/main/default/objects/EventApi__Room__c/fields/EventApi__Rental_Rate_Basis__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Rental_Rate_Basis__c</fullName>
    <description>The basis used to calculate the expense of renting the Room.</description>
    <inlineHelpText>The basis used to calculate the expense of renting the Room.</inlineHelpText>
    <label>Rental Rate Basis</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Hourly</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>