unpackaged/main/default/objects/EventApi__Room__c/fields/EventApi__Square_Feet__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Square_Feet__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The square footage (size) for the Room.</description>
    <inlineHelpText>The square footage (size) for the Room.</inlineHelpText>
    <label>Square Feet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>