unpackaged/main/default/objects/EventApi__Room__c/fields/EventApi__Stage__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Stage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the Room is considered to have a permanent stage or similar stage/platform like structure.</description>
    <inlineHelpText>When checked, the Room is considered to have a permanent stage or similar stage/platform like structure.</inlineHelpText>
    <label>Stage</label>
    <type>Checkbox</type>
</CustomField>