unpackaged/main/default/objects/EventApi__Room__c/fields/EventApi__Target_Capacity__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Target_Capacity__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The target or ideal capacity for the Room is usually slightly less than the &quot;Capacity&quot;.</description>
    <inlineHelpText>The target or ideal capacity for the Room is usually slightly less than the &quot;Capacity&quot;.</inlineHelpText>
    <label>Target Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>