unpackaged/main/default/objects/EventApi__Room__c/fields/EventApi__Venue__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Venue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** Required ** Link to the related Venue for the Room.</description>
    <inlineHelpText>** Required ** Link to the related Venue for the Room.</inlineHelpText>
    <label>Venue</label>
    <referenceTo>EventApi__Venue__c</referenceTo>
    <relationshipLabel>Rooms</relationshipLabel>
    <relationshipName>Rooms</relationshipName>
    <type>Lookup</type>
</CustomField>