unpackaged/main/default/objects/EventApi__Room__c/fields/EventApi__Wireless_Internet__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Wireless_Internet__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, the Room is considered as having wireless internet (WiFi) accessibility.</description>
    <inlineHelpText>When checked, the Room is considered as having wireless internet (WiFi) accessibility.</inlineHelpText>
    <label>Wireless Internet</label>
    <type>Checkbox</type>
</CustomField>